external-crates/move/crates/move-compiler/tests/development/enums/expansion/constants_dont_shadow_leading_access_struct.exp
error[E03006]: unexpected name in this position
   ┌─ tests/development/enums/expansion/constants_dont_shadow_leading_access_struct.move:15:13
   │
15 │             S::foo(); // resolves to struct
   │             ^
   │             │
   │             Invalid construction. Expected an enum
   │             But 'S' is a struct

